canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production-ing
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    custom: happy
spec:
  rules:
    - host: test-dev.d.k5d.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: production
                port:
                  number: 80
